# hh.ru_SQL

./: README.md  main.py  pyproject.toml
src/: abstract_classes.py  db_manager.py  hh_ru_parsing_employers.py  hh_ru_parsing_vacancies.py  settings.py  sql_connection.py
test/: test_db_manager.py  test_hh_ru_parsing_employers.py  test_hh_ru_parsing_vacancies.py
